content align fix

--- a/project-one/css/style.css
+++ b/project-one/css/style.css
@@ -175,17 +175,17 @@ padding: 30px;
 }
 .content-5 {
   padding: 30px;
-  padding-top: 45vh;
+  padding-top: 50vh;
 }
 .content-6 {
   padding: 30px;
-  padding-top: 58vh;
+  padding-top: 64vh;
 }
 .content-7 {
   padding: 30px;
-  padding-top: 72vh;
+  padding-top: 78vh;
 }
 .content-8 {
   padding: 30px;
-  padding-top: 86vh;
+  padding-top: 92vh;
 }
